# claude-fleet

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
docs/: ARCHITECTURE.md  README.md  RELEASING.md  USE_CASES.md  concepts.md  control-api-reference.md  control-api.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql  002_hosts_ssh.sql  003_accounts.sql  004_session_account.sql  005_session_reviews.sql  006_session_worktree_key.sql  007_indexes.sql  008_ghost_sessions.sql  009_claude_agent_fields.sql  009_session_claude_id.sql  009_worktree_missing.sql  010_claude_agent_fields.sql  011_host_provisioned.sql  012_session_context_pressure.sql  013_session_events.sql  014_last_reconciled_at.sql  015_session_messages.sql  016_safe_kill.sql  016_session_friendly_name.sql  017_safe_kill.sql  017_worktree_missing.sql
src-tauri/src/: cancel.rs  claude_agents.rs  claude_cli.rs  events.rs  humanize.rs  ipc_error.rs  lib.rs  projects.rs  pty.rs  shell.rs  ssh.rs  ssh_config.rs  store.rs  tmux.rs  validate.rs
src-tauri/src/commands/: files.rs  health.rs  history.rs  hosts.rs  mcp.rs  mod.rs  mutate.rs  onboarding.rs  projects.rs  repo.rs  sessions.rs  upload.rs  worktrees.rs
src-tauri/src/mcp/: auth.rs  doc_gen.rs  hooks.rs  mod.rs  tools.rs
src-tauri/src/service/: bg_sessions.rs  clipboard.rs  health.rs  hooks.rs  hosts.rs  messages.rs  mod.rs  onboarding.rs  pane_intel.rs  projects.rs  provision.rs  safe_kill.rs  sessions.rs  tunnel.rs  worktrees.rs
(+150 files in other folders)
