[package]
name = "claude-fleet"
version = "0.2.4"
description = "Desktop app for managing Claude Code sessions across hosts"
authors = ["martin-janci"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_fleet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
sysinfo = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
directories = "5"
portable-pty = "0.9"
regex = "1"
once_cell = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
dashmap = "6"
async-trait = "0.1"

# Control API: the app embeds an MCP server (streamable-HTTP transport) on
# localhost so an AI assistant can drive it. See docs/specs/2026-05-21-control-api-mcp-design.md.
rmcp = { version = "1", features = [
    "server",
    "macros",
    "transport-streamable-http-server",
    "schemars",
] }
axum = "0.8"
rand = "0.10"
uuid = { version = "1", features = ["v4"] }
dirs = "5"

[dev-dependencies]
tempfile = "3"
